2005-07-22  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/totem-volume.c: (totem_volume_button_new):
	  Manually call callback once so icon is always drawn (#310806).

2005-07-22  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/totem-volume.c: (totem_volume_button_press):
	  Fix placement of the popup and coordinates of the generated event
	  for the click on the slider afterwards (#310260).

2005-07-22  Luca Cavalli  <loopback@slackit.org>

	Reviewed by:  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* data/totem.glade:
	  Remove vertical separator (#310607).

2005-07-22  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/totem-mozilla-plugin.cpp:
	* src/totem-mozilla-scriptable.h:
	  Be sure to still exist after each mainloop iteration. If not, get
	  out ASAP so we don't crash. Fixes #310480.

2005-07-22  Bastien Nocera  <hadess@hadess.net>

	* src/ev-sidebar.c: (ev_sidebar_select_button_press_cb): make the
	combobox take the whole width of the label in the sidebar
	(Closes: #310602)

2005-07-21  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_action_fullscreen_toggle), (show_controls):
	Hide the sidebar when showing the controls as well (Closes: #310276)

2005-07-19  Bastien Nocera  <hadess@hadess.net>

	* src/scrsaver.c:
	* src/scrsaver.h: Remove unused files (Closes: #310890)

2005-07-18  William Jon McCann  <mccann@jhu.edu>

	* src/plparse/totem-disc.c (cd_cache_new): Don't
	strcmp NULL strings.

2005-07-18  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/backend/bacon-video-widget-gst.c:
	(bacon_video_widget_get_metadata_int):
	  Track-number is UINT in GStreamer.

2005-07-15  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* configure.in:
	* src/Makefile.am:
	* src/totem-mozilla-interface.xml:
	* src/totem-mozilla-plugin.cpp:
	* src/totem-mozilla-scriptable.cpp:
	* src/totem-mozilla-scriptable.h:
	* src/totem-mozilla-viewer.c: (totem_embedded_class_init),
	(totem_embedded_init), (totem_embedded_play),